fix(backend): load allowed CORS origins from environment